[package]
name = "randomness-oracle-broadcaster"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
bs58 = "0.2.5"
clap = "2.33.3"
rand = "0.8.3" 
solana-clap-utils = "1.7.10"
solana-cli-config = "1.7.10"
solana-account-decoder = "1.7.10"
solana-client = "1.7.10"
solana-sdk = "1.7.10"
solana-program = "1.7.10"
tokio = "1.9.0"
randomness-oracle-program = { path="../program", features = [ "no-entrypoint" ] }
