[package]
name = "randomness-oracle-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
bs58 = "0.2.5"
clap = "2.33.3"
solana-clap-utils = "1.6.20"
solana-cli-config = "1.6.20"
solana-account-decoder = "1.6.20"
solana-client = "1.6.20"
solana-logger = "1.6.20"
solana-sdk = "1.6.20"
solana-program = "1.6.20"
randomness-oracle-program = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }