[package]
name = "eggs"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.10"
randomness-oracle-program = { path="../../program", features = [ "no-entrypoint" ] }
borsh = "0.9.1"

[dev-dependencies]
solana-sdk = "1.7.10"
solana-program-test = "1.7.10"

[lib]
crate-type = ["cdylib", "lib"]
